fix gap

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -21,7 +21,7 @@
     padding-bottom: .3rem !important;
 }
 #secondary-panel{
-    max-height: 90vh;
+    max-height: 85vh;
     /* padding: 2rem 0; */
     overflow-y: auto;
 }
